--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-react-webpack-typescript",
-  "version": "0.0.0",
-  "description": "Boilerplate with React, Webpack and TypeScript",
+  "name": "starwars",
+  "version": "0.1.0",
+  "description": "Star Wars Heroes Catalog",
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.dev.js",
