🎸 added react-router-dom using its tutorial feat
https://reactrouter.com/en/main/start/tutorial

--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "Star Wars Heroes Catalog",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.dev.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
     "serve": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js && cross-env serve dist/",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/"
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
@@ -20,6 +24,7 @@
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/sort-by": "^1.2.0",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
